# PANDA-Loader

./: .gitignore  ActionButton.qml  App.axaml  App.axaml.cs  CMakeLists.txt  IPContainer.qml  LICENSE  LICENSE.md  Main.qml  MainWindow.axaml  MainWindow.axaml.cs  ModDetails.qml  ModItem.qml  PANDA-Loader.csproj  PANDA-Loader.sln  PConfigMgr.cpp  PConfigMgr.h  PController.cpp  PController.h  PDatabaseMgr.cpp  PDatabaseMgr.h  PModItem.cpp  PModItem.h  PState.cpp  PState.h  PUtilties.cpp  PUtilties.h  PZtdMgr  PZtdMgr.cpp  PZtdMgr.h  PandaLdr.csproj  PandaLdr.sln  Program.cs  README.md  RailButton.qml  SvgIcon.qml  ViewLocator.cs  app.manifest  main.cpp  pandaLdrApp.exe.manifest  (+1 more)
Models/: ArchiveMgr.cs  MapMgr.cs  ModModel.cs
Services/: ISettingsService.cs  IniService.cs
ViewModels/: HomeViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
Views/: HomeView.axaml  HomeView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs
Views/INISettingsViews/: AdvancedSettingsView.axaml  AdvancedSettingsView.axaml.cs  DebugSettingsView.axaml  DebugSettingsView.axaml.cs  DependencySettingsView.axaml  DependencySettingsView.axaml.cs  DisplaySettingsView.axaml  DisplaySettingsView.axaml.cs  LanguageSettingsView.axaml  LanguageSettingsView.axaml.cs  ManagerSettingsView.axaml  ManagerSettingsView.axaml.cs  MapSettingsView.axaml  MapSettingsView.axaml.cs  ResourceSettingsView.axaml  ResourceSettingsView.axaml.cs  ScenarioSettingsView.axaml  ScenarioSettingsView.axaml.cs  UISettingsView.axaml  UISettingsView.axaml.cs  UserSettingsView.axaml  UserSettingsView.axaml.cs
interfaces/: IConfigLoader.cpp  IConfigLoader.h  IIni.cpp  IIni.h  IToml.cpp  IToml.h
libs/apecore/: ApeCore.cpp  CMakeLists.txt  LICENSE
libs/apecore/include/: ApeCore.h
libs/quazip/: README
libs/quazip/cmake/: FindQuaZip.cmake
libs/quazip/lib/: FindQuaZip.cmake  quazip.lib
libs/simpleini/include/: LICENSE  SimpleIni.h
models/: PEntityType.cpp  PEntityType.h  PIconData.h  PModItem.cpp  PModItem.h  PModModel.cpp  PModModel.h  PSettings.cpp  PSettings.h  PZooConfig.cpp  PZooConfig.h
src/: PConfigMgr.cpp  PConfigMgr.h  PController.cpp  PController.h  PDatabaseMgr.cpp  PDatabaseMgr.h  PGraphicsMgr.cpp  PGraphicsMgr.h  PIniConfig.cpp  PIniConfig.h  PModItem.cpp  PModItem.h  PState.cpp  PState.h  PSystemMgr.cpp  PSystemMgr.h  PTomlConfig.cpp  PTomlConfig.h  PZtdMgr.cpp  PZtdMgr.h  main.cpp
src/app/: PAppController.cpp  PAppController.h  PLauncher.cpp  PLauncher.h
src/config/: IConfigLoader.h  PConfigMgr.cpp  PConfigMgr.h  PIniConfig.cpp  PIniConfig.h  PTomlConfig.cpp  PTomlConfig.h
src/controllers/: PAppController.cpp  PAppController.h  PController.cpp  PController.h  PModController.cpp  PModController.h  PModMgr.cpp  PModMgr.h  PModModel.h  PSystemMgr.h
src/data/: PDataList.h
src/database/: PDatabase.cpp  PDatabase.h  PDatabaseMgr.cpp  PDatabaseMgr.h  PModQueries.h
src/filesystem/: IVirtualFilesystem.h  PFile.cpp  PFile.h  PFileSystem.cpp  PFileSystem.h  PZip.cpp  PZip.h
src/graphics/: PApeFile.cpp  PApeFile.h  PGraphicsMgr.h
src/interfaces/: IVirtualFilesystem.h
src/ldrs/: PConfigMgr.cpp  PConfigMgr.h  PDatabaseMgr.cpp  PDatabaseMgr.h  PFile.cpp  PFile.h  PFileSystem.cpp  PFileSystem.h  PIniConfig.h  PSystemMgr.h  PTomlConfig.h  PZip.cpp  PZip.h  PZtdMgr.cpp  PZtdMgr.h
src/mgrs/: PController.cpp  PController.h  PGraphicsMgr.cpp  PGraphicsMgr.h  PState.cpp  PState.h
src/models/: PDependency.h  PEntityType.h  PFile.h  PFileData.h  PModItem.cpp  PModItem.h  PModModel.h
src/mods/: PDepDal.cpp  PDepDal.h  PDepDataAccess.cpp  PDepDataAccess.h  PModController.cpp  PModController.h  PModDAL.cpp  PModDAL.h  PModDataAccess.cpp  PModDataAccess.h  PModGateway.cpp  PModGateway.h  PModList.h  PModLoader.cpp  PModLoader.h  PModQueries.h  PModUIController.cpp  PModUIController.h
src/structures/: PDataList.h
tests/: PTestConfigMgr.cpp  PTestDatabaseMgr.cpp  PTestFileSystem.cpp  PTestGraphicsMgr.cpp  PTestZtdMgr.cpp
tests/test_data/: config - Copy.toml  config.ini  config_remove_invalid - Copy.ztd  config_remove_valid.ztd  config_update_valid.ztd  config_valid.ztd  getfile_valid.ztd  getfile_valid_uca.ztd  invalid_no_ext  panda-ldr.padb  valid.ztd  valid_rename.ztd
tests/test_data/filesystem/: config.toml  ferret.ZTD  nyala.ZTD
tests/test_data/test_dir/: valid.ztd
ui/: ActionButton.qml  FilterTag.qml  InfoPane.qml  InfoPaneItem.qml  Main.qml  ModDetails.qml  ModItem.qml  SearchBar.qml  SimpleModal.qml  SvgIcon.qml  qmldir
ui/appbar/: AppBarLayout.qml
ui/infopane/: InfoPane.qml  InfoPaneItem.qml
ui/layouts/: LayoutFrame.qml  MainContent.qml
ui/layouts/mods/: ModPage.qml
ui/layouts/mods/components/: LaunchArea.qml  ModsList.qml
ui/layouts/settings/: SettingsConfirmationBar.qml  SettingsPage.qml  SettingsPane.qml
ui/layouts/settings/components/: DebugSettings.qml  GameplaySettings.qml  LanguageSettings.qml  PandaSettings.qml  ResourcePathsSettings.qml  ScenarioSettings.qml  SoundSettings.qml  UISettings.qml  VideoSettings.qml
ui/misc/: AppendTable.qml  BrowseButton.qml  ClearButton.qml  ControlPanel.qml  PCheckBox.qml  PTextField.qml  SettingsButton.qml  SimpleModal.qml  SvgIcon.qml
ui/modlist/: ModItem.qml
ui/navbar/: Navigation.qml  RailButton.qml
ui/searchbar/: FilterTag.qml  SearchBar.qml
